Fix HTML encoding issues in index.html
Corrected the image path

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         <h2 id="title2">Choose a Quiz Category</h2>
         <div id="box">
             <div class="card" id="History">
-                <img src="pic/temp1.webp" >
+                <img src="temp1.webp" >
                 <h3>HISTORY</h3>
             </div>
             <div class="card" id="Geography">
-                <img src="pic/temp3.webp">
+                <img src="temp3.webp">
                 <h3>GEOGRAPHY</h3></div>
             <div class="card" id="General_Knowledge">
-                <img src="pic/temp4.avif" >
+                <img src="temp4.avif" >
                 <h3>GENERAL KNOWLEDGE</h3></div>
             <div class="card" id="Science">
-                <img src="pic/temp5.avif">
+                <img src="temp5.avif">
                 <h3>SCIENCE</h3></div>
             <div class="card" id="Entertainment">
-                <img src="pic/temp6.webp">
+                <img src="temp6.webp">
                 <h3>ENTERTAINMENT</h3></div>
             <div class="card" id="Sports">
-                <img src="pic/temp7.jpg">
+                <img src="temp7.jpg">
                 <h3>SPORTS & GAMES</h3></div>
             <div class="card" id="Technology">
-                <img src="pic/temp8.webp">
+                <img src="temp8.webp">
                 <h3>TECHNOLOGY</h3></div>
         </div>
       </div>
@@ -110,4 +110,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
